Fixing out of bounds bug

--- a/css/admin.css
+++ b/css/admin.css
@@ -1014,6 +1014,10 @@ body #post-head-content p.wp-clearfix:nth-child(1) {
 	border: 2px dashed red;
 	background-color: rgba(255, 0, 0, 0.1);
 }
+
+.filter-fields-list {
+	position: relative; /* gives local context for left:0 */ 
+  }
   
 
 .list-fields-for-each-page .ui-sortable-helper {
